# ai-recruitment-hub

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  shared.py
code/: context.py  llm_connect.py
data/: context.json
milestone2/: candidate_analysis.ipynb  data.ipynb  interview_scheduler.ipynb  profile_generation.ipynb
milestone2/data/: applications.csv  job_description_cloud_senior.txt  mcp_context.json  scheduled_candidates.csv
milestone2/data/candidates/: qualified_candidates.csv  unqualified_candidates.csv
milestone2/data/validated/: all_candidates.csv
milestone4/: app.py
milestone4/server/: candidate_profile.py  correlation_analysis.py  document_creation.py  home.py  interview_scheduler.py  job_creation.py  plot_generation.py
milestone4/ui/: chart_generation.py  home.py  interview_scheduler.py
server/: __init__.py  candidate_profile.py  correlation_analysis.py  document_creation.py  home.py  interview_scheduler.py  job_creation.py  plot_generation.py
styles/: custom.css
ui/: candidate_profile.py  correlation_analysis.py  document_creation.py  home.py  job_creation.py
