[project]
name = "recruitment-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.22",
    "markdown>=3.8",
    "openai>=1.86.0",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.17",
    "pyrsm>=1.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
